tests/hep3_bad_null_assign.hop
// Verifies HEP 3 bad null assign.
import "hophop/feature/optional"

pub fn bad() *i32 {
	return null
}
